# hass-mcintosh

./: README.md  hacs.json  pyproject.toml
.claude/: settings.local.json
custom_components/mcintosh/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  media_player.py  number.py  strings.json  switch.py  utils.py
custom_components/mcintosh/pymcintosh/: README.md  __init__.py  models.py  protocol.py
custom_components/mcintosh/translations/: da.json  de.json  en.json  es.json  fr.json  it.json  ja.json  nl.json  pt.json  zh-Hans.json
pymcintosh/: README.md  __init__.py  example-async.py  example.py  models.py  pyproject.toml  setup.py
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_entity_id_stability.py  test_media_player.py  test_number.py  test_switch.py
